<?xml version="1.0" encoding="utf-8"?>
<com.szzk.percent.support.PercentRelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:imagecontrol="http://schemas.android.com/apk/res-auto" 
     android:background="@drawable/background_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
      <com.szzk.percent.support.PercentRelativeLayout
        android:id="@+id/top_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"  
        app:layout_heightPercent="11%w" 
        android:background="@drawable/top_bg"
         >
         <TextView
            android:id="@+id/title_tv"
            app:layout_heightPercent="11%w"     
         	android:layout_width="match_parent"
         	android:layout_height="0dp"
         	android:gravity="center"
         	android:text="@string/seting"
         	app:layout_textSizePercent="6%w"         	  
         	android:textColor="#fff"
         	android:layout_centerVertical="true"
         />
        <ImageView 
            android:id="@+id/back_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="8%w"
        	app:layout_heightPercent="8%w"
        	android:background="@drawable/back"
        	android:layout_centerVertical="true"
        	android:layout_marginLeft="5dp"
            />   
	 </com.szzk.percent.support.PercentRelativeLayout>
	 <TextView 
	    android:layout_marginLeft="3dp"
	    android:id="@+id/com_name_tv"		  
		  android:text="@string/com_name"
		  app:layout_textSizePercent="6%w"    
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:textColor="#444"
		  android:layout_toLeftOf="@+id/arrow_down_iv"
		   app:layout_marginTopPercent="3%w"
		   android:layout_below="@+id/top_bg"	
	    />
	 <EditText 	   
	    android:layout_below="@+id/top_bg"	
	    android:layout_width="match_parent"	   
    	android:layout_height="wrap_content"  
    	app:layout_heightPercent="11%w"   	
    	android:id="@+id/com_name_et"    
    	android:layout_toRightOf="@+id/com_name_tv"
    	android:background="@drawable/et"
    	android:singleLine="true"
    	app:layout_textSizePercent="6%w"    
    	android:text="ttySAC0"
    	android:gravity="center"
    	app:layout_marginTopPercent="3%w"
    	app:layout_marginRightPercent="3%w"
    	android:visibility="gone"
	    />	
	    <com.szzk.percent.support.PercentRelativeLayout	    
	    android:layout_toRightOf="@+id/com_name_tv"
	     android:layout_below="@+id/top_bg"	
	    app:layout_marginTopPercent="3%w"
	    android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:id="@+id/drivername_prl"
    	app:layout_heightPercent="11%w"
	    android:layout_marginLeft="10dp"
	    android:background="@drawable/et"
	    app:layout_marginRightPercent="3%w"
	    >
		<TextView
		     android:layout_width="match_parent"
		     android:layout_centerVertical="true"
	    	android:layout_height="wrap_content"     	
	    	android:id="@+id/drivername_tv"    
	    	android:layout_toLeftOf="@+id/type_prl"	
	    	android:background="#00000000"
	    	android:singleLine="true"
	    	app:layout_textSizePercent="8%w"    
	    	android:text="ttyS0"
	    	android:gravity="center"
		    />	
		 <ImageView 
		     app:layout_heightPercent="5%w"
			 app:layout_widthPercent="5%w"
			  android:layout_alignParentRight="true"
			  android:layout_centerVertical="true"
			  android:layout_marginRight="3dp"
			  android:id="@+id/arrow_down1_iv"
			  android:background="@drawable/arrow_down"
			  app:layout_marginRightPercent="3%w"
		     />
	 </com.szzk.percent.support.PercentRelativeLayout>
	<TextView 
	    android:layout_marginLeft="3dp"
	    android:id="@+id/baud_rate_tv"		  
		  android:text="@string/baud_rate"
		  app:layout_textSizePercent="6%w"    
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:textColor="#444"
		  android:layout_toLeftOf="@+id/arrow_down_iv"
		   app:layout_marginTopPercent="3%w"
		   android:layout_below="@+id/drivername_prl"	
	    />
	<com.szzk.percent.support.PercentRelativeLayout	    
	    android:layout_toRightOf="@+id/baud_rate_tv"
	    android:layout_below="@+id/drivername_prl"	   
	    app:layout_marginTopPercent="3%w"
	    android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:id="@+id/input_prl"
    	app:layout_heightPercent="11%w"
	    android:layout_toLeftOf="@+id/search_prl"
	    android:layout_marginLeft="10dp"
	    android:background="@drawable/et"
	    app:layout_marginRightPercent="3%w"
	    >
	<TextView
	     android:layout_width="match_parent"
	     android:layout_centerVertical="true"
    	android:layout_height="wrap_content"     	
    	android:id="@+id/baud_rate_et"    
    	android:layout_toLeftOf="@+id/type_prl"	
    	android:background="#00000000"
    	android:singleLine="true"
    	app:layout_textSizePercent="8%w"    
    	android:text="9600"
    	android:gravity="center"
	    />	
	 <ImageView 
	     app:layout_heightPercent="5%w"
		 app:layout_widthPercent="5%w"
		  android:layout_alignParentRight="true"
		  android:layout_centerVertical="true"
		  android:layout_marginRight="3dp"
		  android:id="@+id/arrow_down_iv"
		  android:background="@drawable/arrow_down"
		  app:layout_marginRightPercent="3%w"
	     />
	 </com.szzk.percent.support.PercentRelativeLayout>
	 <TextView 
	     android:layout_marginTop="20dp"
	      android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:layout_below="@+id/input_prl"
		 android:textColor="#FA0F23"
		 android:text="@string/tishi"
	     />
	 <Button 
	     android:layout_marginLeft="10dp"
		 android:layout_marginRight="10dp"
		 android:layout_marginBottom="10dp"
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
	     android:text="@string/save_seting"
	     android:id="@+id/save_set_bt"
         app:layout_textSizePercent="6%w"    
	     android:layout_alignParentBottom="true"
	     />
</com.szzk.percent.support.PercentRelativeLayout>
